# calorie-counter

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
configs/: config.py
scripts/: dataset.py  model.py  utils.py
